# FeedForwardNN

./: .gitignore  README.md
CUDA/: CMakeLists.txt  config.txt  main.cu
CUDA/include/: dataloader.hpp  readconfig.hpp
CUDA/src/: dataloader.cpp  readconfig.cpp
openMP/: CMakeLists.txt  config.txt
openMP/include/: dataloader.h  network.h  readconfig.h  utilities.h
openMP/src/: dataloader.c  main.c  readconfig.c  utilities.c
